# Agricultural-robot-modules

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  app.py  benchmark.py  compute_metrics.py  config.py  convert_all_masks.py  dataset.yaml  evaluate.py  infer.py  jop  main.cpp  predict_test.py  predict_val.py  pytest.ini  requirements.txt  robot_router.py  train.py  train_unet.py  utils.py
commands/: robot_commands.py
config/: app_settings.py  ml_models_settings.py  redis_settings.py  robot_spec.py
datasets/: weed_dataset.py
db_module/: dbinterface.h  main.cpp  schema.sql  sqlitedb.cpp  sqlitedb.h
include/: datatypes.h
include/config/: config.h
include/dbinterface/: dbinterface.h
include/status/: logmessages.h  statuscodes.h  statusmapper.h
models/: deeplab_mnv3.py  detect_model.py  fertilizer_model.py
redis/: redismanager.cpp  redismanager.h  routessetup.cpp  routessetup.h
schemas/: collect.py  command.py  detect.py  fertilizer.py  schemas.py  specification.py  tasks.py
sensors/: sensors.py
src/: server.cpp
src/db/: sqlitedb.cpp
src/network/: Base.h  Http.cc  Http.h  Tcp.cc  Tcp.h  Udp.cc  Udp.h
src/sql/: schema.sql
state/: config.py  robot_spec.py  robot_state.py  robot_state_data.py
test/ann/: FPWW0180049_RGB1_20170308_113954_6.png.json  FPWW0180049_RGB1_20170315_102908_6.png.json  FPWW0180049_RGB1_20170329_143149_6.png.json  FPWW0180049_RGB1_20170412_132427_6.png.json  FPWW0180049_RGB1_20170420_111709_6.png.json  FPWW0180049_RGB1_20170517_142522_6.png.json  FPWW0180094_RGB1_20170308_114711_6.png.json  FPWW0180135_RGB1_20170505_154117_6.png.json  FPWW0180139_RGB1_20170412_134921_6.png.json  FPWW0180151_RGB1_20170420_130936_6.png.json  FPWW0180357_RGB1_20170405_173042_6.png.json  FPWW0180367_RGB1_20170323_154909_6.png.json  FPWW0180367_RGB1_20170329_143316_6.png.json  FPWW0180367_RGB1_20170405_173248_6.png.json  FPWW0180367_RGB1_20170412_145913_6.png.json  FPWW0180367_RGB1_20170505_163137_6.png.json  FPWW0180374_RGB1_20170222_133502_6.png.json  FPWW0180375_RGB1_20170222_133519_6.png.json  FPWW0180546_RGB1_20170505_135217_6.png.json  FPWW0180591_RGB1_20170510_160229_6.png.json  FPWW0180608_RGB1_20170517_164913_6.png.json  FPWW0180665_RGB1_20170510_162129_6.png.json  FPWW0180741_RGB1_20170308_135245_6.png.json  FPWW0180755_RGB1_20170323_173949_6.png.json
tests/: conftest.py  test_app.py  test_basic_endpoints.py  test_concurrency.py  test_error_requests.py  test_ml_service.py  test_ordering.py  test_robot_router.py
train/ann/: FPWW0220011_RGB1_20180316_100219_6.png.json  FPWW0220032_RGB1_20171213_141430_6.png.json  FPWW0220032_RGB1_20180112_121036_6.png.json  FPWW0220032_RGB1_20180124_115802_6.png.json  FPWW0220032_RGB1_20180207_120354_6.png.json  FPWW0220032_RGB1_20180220_142617_6.png.json  FPWW0220032_RGB1_20180305_114520_6.png.json  FPWW0220032_RGB1_20180316_100627_6.png.json  FPWW0220032_RGB1_20180323_143114_6.png.json  FPWW0220032_RGB1_20180406_110138_6.png.json  FPWW0220032_RGB1_20180411_113950_6.png.json  FPWW0220032_RGB1_20180419_113813_6.png.json  FPWW0220032_RGB1_20180424_112157_6.png.json  FPWW0220066_RGB1_20180207_121054_6.png.json  FPWW0220071_RGB1_20180124_120540_6.png.json  FPWW0220078_RGB1_20171213_142438_6.png.json  (+126 more)
utils/: augmentations.py  metrics.py
workers/: manager.py  validators.py  worker.py
(+30 files in other folders)
